Sonar: Fikser feil fra sonar * Lagt inn kommentarer i tomme metoder * Tar i bruk etablerte konstanter * Oppretter konstanter for tekster som bruker minst 3 steder * Renaming av konstanter for å matche definert regex * Tatt i bruk jakarta @Nullable for å returnere null i Boolean-metode * Disablet test hvor asserts er kommentert ut midlertidig